<resources>
    <string name="app_name">EyeDentify</string>
    <string name="scan_item">SCAN ITEM WITH CAMERA</string>
    <string name="tag_item">TAG ITEM</string>
    <string name="item_description_label">Item Description</string>
    <string name="item_description">Can of chicken noodle soup with red and white label.</string>
    <string name="keywords_label">Item Keywords</string>
    <string name="keywords">campbell\ncondensed\nchicken\nnoodle\nsoup</string>
    <string name="pair_with_tag">PAIR WITH TAG</string>
    <string name="imageContentDescription">Image of scanned item.</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_voice_memo">ADD VOICE MEMO</string>
    <string name="edit_tag">EDIT TAG</string>
    <string name="textContentDescription">Text field for item description.</string>
    <string name="keywordContentDescription">Text field for keywords about the item.</string>
    <string name="speak_description">Speak Description</string>
    <string name="speak_keywords">Speak Keyword</string>
    <string name="title_activity_login">EyeDentify</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="image_results_loading">Retrieving Image Description</string>
    <string name="login_button">LOGIN</string>
    <string name="create_button">CREATE ACCOUNT</string>
    <string name="play_voice_memo">PLAY VOICE MEMO</string>
    <string name="pairing">Listening to a tag</string>
    <string name="perm_denied">Permission Denied</string>
    <string name="go_back_page">Please go Back to Previous Page to Scan a Tag</string>
    <string name="please_fill_either">Please fill out item description or voice memo to pair a tag</string>
    <string name="invalid_in_tag">Invalid Information in Tag</string>
    <string name="record_complete">Recording Complete</string>
    <string name="record_error">To start recording voice memo, please tap and hold. To end recording, release the button.</string>
    <string name="cannot_parse">Cannot Parse Information in Tag</string>
    <string name="on_cloudsight_failure">Cannot provide image description at this time. Please try again.</string>
    <string name="cannot_read">Cannot read from tag</string>
    <string name="missing_file">Likely missing files</string>
    <string name="you_just">"You just came across "</string>
    <string name="possible_words">"and possible words are "</string>
    <string name="warning_overwrite">Warning: tag with information will get overwritten.</string>
    <string name="email">Email</string>
    <string name="invalid_email">invalid email</string>
    <string name="invalid_cred">Invalid login credentials</string>
    <string name="email_empty">Email field is empty</string>
    <string name="no_internet">Not connected to internet</string>
    <string name="email_used">Email already registered</string>
    <string name="password">Password</string>
    <string name="password_min">Password must be minimum 6 characters</string>
    <string name="password_empty">Password field is empty</string>
    <string name="write_success">Successfully written to tag</string>
    <string name="incorrect_response">This tag is not responding, please try again</string>
    <string name="error_unknown">Authentication failed unknown error</string>
    <string name="TextRecognizerError">Cannot provide image keywords at this time. Please try again.</string>
    <string name="logo_description">EyeDentify Logo shows a black background with an illustration of an eye in yellow and a gold banner flowing on top.</string>
    <string name="recording_erased">recording erased</string>
    <string name="shake_instruction">press and hold to record memo, shake phone to delete memo</string>
</resources>