<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TagActivity">


        <ImageView
            android:id="@+id/imgScannedItem"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:layout_margin="5dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/eyedentify_logo_black_gold"
            tools:srcCompat="@drawable/eyedentify_logo_black_gold" />


        <TextView
            android:id="@+id/tvDescriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:labelFor="@+id/tvDescription"
            android:text="@string/item_description_label"
            android:textSize="24sp"
            android:textStyle="bold" />
        

        <EditText
            android:id="@+id/edtItemDescription"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_weight="7"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/textContentDescription"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColorHint="#546E7A"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tvWordsDetectedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:labelFor="@+id/tvWordsDetected"
            android:text="@string/keywords_label"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edtItemKeywords"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_weight="7"
            android:ems="10"
            android:enabled="true"
            android:focusable="true"
            android:gravity="start|top"
            android:hint="@string/keywordContentDescription"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:maxEms="4"
            android:minLines="3"
            android:scrollbars="vertical"
            android:textColorHint="#546E7A"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <androidx.cardview.widget.CardView

            android:id="@+id/cardViewAddPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="7"
            android:elevation="10dp"
            app:cardCornerRadius="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/orangestripe" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/scan_item"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/cardViewAddVoiceMemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="7"
            android:elevation="10dp"
            app:cardCornerRadius="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/yellowdiamond" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/shake_instruction"
                    android:gravity="center"
                    android:text="@string/add_voice_memo"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/cardViewEditTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="7"
            android:elevation="10dp"
            app:cardCornerRadius="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/greenstripe"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/pair_with_tag"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

        </androidx.cardview.widget.CardView>

</LinearLayout>