<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical">

        <androidx.cardview.widget.CardView

            android:id="@+id/cardViewPlayVoiceMemo"
            app:cardCornerRadius="50dp"
            android:layout_margin="5dp"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7">

                <ImageView
                    android:background="@drawable/yellowdiamond"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/play_voice_memo"
                    android:textSize="40sp"
                    android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


        <ImageView
            android:id="@+id/imgScannedItem"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/imageContentDescription"
            app:srcCompat="@drawable/can_of_soup"
            tools:srcCompat="@drawable/can_of_soup" />


        <TextView
            android:id="@+id/tvDescriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:labelFor="@+id/tvDescription"
            android:text="@string/item_description_label"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!--        <TextView-->
        <!--            android:id="@+id/tvDescription"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_weight="3"-->
        <!--            android:text="@string/item_description"-->
        <!--            android:textSize="20sp" />-->

        <TextView
            android:id="@+id/edtItemDescription"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="7"
            android:ems="10"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColorHint="#546E7A"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tvWordsDetectedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:labelFor="@+id/tvWordsDetected"
            android:text="@string/keywords_label"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!--        <TextView-->
        <!--            android:id="@+id/tvWordsDetected"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_weight="3"-->
        <!--            android:text="@string/keywords"-->
        <!--            android:textSize="20sp" />-->

        <TextView
            android:id="@+id/edtItemKeywords"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_weight="7"
            android:ems="10"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:enabled="true"
            android:focusable="true"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:maxEms="4"
            android:minLines="3"
            android:scrollbars="vertical"
            android:textColorHint="#546E7A"
            tools:ignore="DuplicateSpeakableTextCheck" />
        <androidx.cardview.widget.CardView

            android:id="@+id/cardViewEditTagResults"
            app:cardCornerRadius="50dp"
            android:layout_margin="5dp"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7">

                <ImageView
                    android:background="@drawable/greenstripe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/edit_tag"
                    android:textSize="40sp"
                    android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
<!--        <Button-->
<!--            android:id="@+id/btnEditTag"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="2dp"-->
<!--            android:layout_weight="7"-->
<!--            android:background="@drawable/greenstripe"-->
<!--            android:text="@string/edit_tag"-->
<!--            android:textSize="24sp" />-->
</LinearLayout>